# ReleasePilot

./: .gitignore  .releasepilot.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release-notes.yml
docs/: architecture.md  ci-cd.md  config-schema.md  configuration.md  dashboard.md  github-integration.md  gitlab-integration.md  narrative-mode.md  troubleshooting.md  web-wizard.md
examples/: .releasepilot.json  cli-usage.sh  github-release-notes.yml  github-workflow.yml  gitlab-pipeline.yml  multi-repo-config.json  remote-repos.md  sample_changes.json
playground/: .gitignore  README.md
playground/configs/: customer-facing.json  executive-english.json  executive-polish.json  multi-repo.json  technical-detailed.json  user-german.json
playground/expected/: acme-web-changelog.md  acme-web-tag-range.md  acme-web-user-de.md  nova-api-summary.md  (+1 more)
schema/: releasepilot.schema.json
scripts/: pre-commit
tests/: conftest.py  test_audience.py  test_blocker_fixes.py  test_classifier.py  test_cli.py  test_config_validation.py  test_customer_and_stats.py  test_dashboard.py  test_dashboard_core.py  test_dashboard_templates.py  test_dedup.py  test_dedup_and_views.py  test_domain.py  test_errors.py  test_executive.py  test_executive_cli.py  test_executive_composition.py  test_executive_renderers.py  test_export.py  test_filter.py  test_git_validation.py  test_gitlab.py  test_gitlab_client.py  test_gitlab_helpers.py  test_gitlab_inspector.py  test_gitlab_integration.py  test_grouper.py  test_guide.py  test_i18n.py  test_i18n_parity.py  test_input_validation.py  test_inspector.py  test_json_config.py  test_narrative.py  test_narrative_cli.py  test_narrative_composition.py  test_narrative_rendering.py  test_phase11.py  test_phase12.py  test_phase13.py  (+27 more)
(+118 files in other folders)
